--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,10 @@
-// {
-//   "extends": "next/core-web-vitals",
-//   "rules": {
-//     "@next/next/no-img-element": "off",
-//     "@next/next/no-page-custom-font": "off",
-//     "jsx-a11y/alt-text": "off",
-//     "react/display-name": "off",
-//     "react/no-children-prop": "off",
-//     "react/jsx-max-props-per-line": [
-//       1,
-//       {
-//         "maximum": 1
-//       }
-//     ]
-//   }
-// }
+{
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "@next/next/no-img-element": "off",
+    "@next/next/no-page-custom-font": "off",
+    "jsx-a11y/alt-text": "off",
+    "react/display-name": "off",
+    "react/no-children-prop": "off"
+  }
+}
