--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-easy-crop": "^5.0.2",
     "react-i18next": "12.2.2",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.1.2",
     "react-slick": "0.29.0",
     "react-syntax-highlighter": "15.5.0",
