--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.4.0",
     "date-fns": "2.30.0",
     "dayjs": "^1.11.9",
+    "exceljs": "^4.4.0",
     "formik": "^2.4.2",
     "i18next": "22.4.15",
     "jwt-decode": "^3.1.2",
