--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "stylis-plugin-rtl": "2.1.1",
     "swr": "^2.2.2",
     "use-debounce": "^9.0.4",
+    "uuid": "^10.0.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
