--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-i18next": "12.2.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-phone-input-2": "^2.15.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-slick": "0.29.0",
     "react-syntax-highlighter": "15.5.0",
