--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "11.11.0",
     "@emotion/server": "11.11.0",
     "@emotion/styled": "11.11.0",
+    "@jitsi/react-sdk": "^1.4.0",
     "@mui/icons-material": "5.11.16",
     "@mui/lab": "5.0.0-alpha.129",
     "@mui/material": "5.13.0",
@@ -39,7 +40,8 @@
     "lodash.isequal": "^4.5.0",
     "mdi-material-ui": "^7.9.1",
     "moment-timezone": "^0.5.43",
-    "next": "13.4.2",
+    "next": "^14.2.11",
+    "next-transpile-modules": "^10.0.1",
     "nprogress": "0.2.0",
     "numeral": "2.0.6",
     "prop-types": "15.8.1",
