--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-syntax-highlighter": "15.5.0",
     "react-toastify": "^10.0.4",
     "simplebar-react": "3.2.4",
+    "socket.io-client": "^4.8.0",
     "stylis": "4.2.0",
     "stylis-plugin-rtl": "2.1.1",
     "swr": "^2.2.2",
