--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lodash.isequal": "^4.5.0",
     "mdi-material-ui": "^7.9.1",
     "moment-timezone": "^0.5.43",
+    "mui-phone-number": "^3.0.3",
     "next": "^14.2.11",
     "next-transpile-modules": "^10.0.1",
     "nprogress": "0.2.0",
@@ -56,7 +57,6 @@
     "react-easy-crop": "^5.0.2",
     "react-i18next": "12.2.2",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-phone-input-2": "^2.15.1",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-slick": "0.29.0",
