integrate calender UI

--- a/package.json
+++ b/package.json
@@ -28,6 +28,13 @@
     "@types/lodash.debounce": "^4.0.9",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@untitled-ui/icons-react": "0.1.1",
+    "@fullcalendar/core": "6.1.7",
+    "@fullcalendar/daygrid": "6.1.7",
+    "@fullcalendar/interaction": "6.1.7",
+    "@fullcalendar/list": "6.1.7",
+    "@fullcalendar/react": "6.1.7",
+    "@fullcalendar/timegrid": "6.1.7",
+    "@fullcalendar/timeline": "6.1.7",
     "apexcharts": "3.40.0",
     "axios": "^1.4.0",
     "country-state-city": "^3.2.1",
